# SuperClaude

./: .dockerignore  .gitignore  .nightly-review-quality.md  .nightly-review-security.md  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CLAUDE_CORE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-READY.md  Dockerfile  FLAGS.md  GAPS.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MCP_Magic.md  MCP_Sequential.md  MODE_CORE.md  MODE_EXECUTION.md  OPERATIONS.md  PAL-MCP-INTEGRATION-SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PRINCIPLES.md  QUICKSTART.md  README.md  README_CLEAN.md  README_DYNAMIC_LOADING_SUMMARY.md  README_OLD.md  ROADMAP.md  RULES.md  RULES_CRITICAL.md  RULES_RECOMMENDED.md  SECURITY.md  SONDERA_INTEGRATION.md  (+20 more)
.fakehome/: .gitconfig  .viminfo
.githooks/: post-merge
.github/: AUTONOMOUS_SCANNER_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SCANNER_QUICKSTART.md  AUTONOMOUS_SCANNER_STATUS.md  CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.superclaude_logs/: daemon.pid
Docs/: README.md  coderabbit_integration_plan.md  codex_cli_jsonl_parser.md  hallucination-playbook.md  memory-optimization-plan.md  migration-guide.md  quality-gates.md  real_integrations_plan.md  test_improvement_checklist.md
SuperClaude/: __init__.py  __main__.py
agents/: index.yaml
archive_old_modes/: MODE_Task_Management.md  WORKFLOWS.md
artifacts/: perf_benchmark.py  perf_find_duplicates.py  response-backend-architect-run1.txt  response-frontend-architect-run1.txt  response-fullstack-developer-run1.txt  response-learning-guide-run1.txt  response-performance-engineer-run1.txt  response-quality-engineer-run1.txt  response-refactoring-expert-run1.txt  response-requirements-analyst-run1.txt  response-root-cause-analyst-run1.txt  response-security-engineer-run1.txt  response-socratic-mentor-run1.txt  response-system-architect-run1.txt  response-technical-writer-run1.txt
benchmarks/: __init__.py  run_benchmarks.py
claudedocs/: EXTENDED_AGENT_IMPLEMENTATION.md  documentation_consolidation_report.md  feature_parity_achieved.md  implementation_summary_v6.md  troubleshooting.md
commands/: cicd-setup.md  estimate.md  git.md  implement.md  index.yaml  mcp.md  pr-fix.md  readme.md  test.md  workflow.md
config/: agents.yaml  coderabbit.yaml  consensus_policies.yaml  mcp.yaml  models.yaml  quality.yaml  superclaud.yaml
core/: __init__.py  loop_orchestrator.py  metrics.py  pal_integration.py  quality_assessment.py  skill_learning_integration.py  skill_persistence.py  termination.py  types.py
crates/dashboard/: Cargo.toml  README.md  tauri.conf.json
crates/dashboard/capabilities/: default.json
crates/dashboard/frontend/: Cargo.toml  Trunk.toml  index.html
crates/dashboard/frontend/src/: app.rs  lib.rs
crates/dashboard/frontend/src/components/: agent_card.rs  config_form.rs  diff_view.rs  empty_state.rs  error_banner.rs  event_log.rs  execution_detail.rs  execution_tree.rs  header.rs  iteration_progress.rs  loading_spinner.rs  mod.rs  score_chart.rs  search_filter.rs  sidebar.rs  status_badge.rs
crates/dashboard/frontend/src/ipc/: commands.rs  events.rs  mod.rs
crates/dashboard/frontend/src/pages/: control.rs  history.rs  inventory.rs  mod.rs  monitor.rs
crates/dashboard/frontend/src/state/: app_state.rs  mod.rs
crates/dashboard/frontend/style/: main.css
crates/dashboard/src/: main.rs  state.rs
crates/dashboard/src/bridge/: event_forwarder.rs  grpc_client.rs
crates/dashboard/src/commands/: config.rs  execution.rs  inventory.rs  metrics.rs  mod.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: superclaude.proto
crates/proto/src/: lib.rs
crates/superclaude-core/: Cargo.toml
crates/superclaude-core/src/: config.rs  inventory.rs  lib.rs  metrics_reader.rs  types.rs
crates/superclaude-daemon/: Cargo.toml  build.rs
crates/superclaude-daemon/examples/: start_execution.rs
crates/superclaude-daemon/src/: execution.rs  main.rs  metrics_watcher.rs  server.rs
crates/superclaude-runtime/: API_CLIENT.md  Cargo.toml  LOOP_RUNNER_ARCHITECTURE.md
crates/superclaude-runtime/docs/: HOOKS_MODULE.md  SAFETY_MODULE.md
crates/superclaude-runtime/examples/: api_basic.rs  skills_demo.rs
crates/superclaude-runtime/src/: api.rs  events.rs  evidence.rs  hooks.rs  lib.rs  loop_runner.rs  main.rs  obsidian.rs  quality.rs  registry.rs  safety.rs  selector.rs  skills.rs
crates/superclaude-runtime/tests/: .events_snapshots.rs.pending-snap  events_snapshots.rs  integration_test.rs  test_api.rs  test_hooks.rs  test_safety.rs  test_skills.rs
daemon/: Cargo.toml  build.rs
daemon/proto/: superclaude.proto
daemon/src/: execution.rs  main.rs  metrics_watcher.rs  server.rs
daemon/src/proto/: superclaude.v1.rs
docs/: AGENT_USAGE.md  EXTENDED_AGENT_SYSTEM.md  test-modernization-plan.md  testing.md
evals/: e2e_apps.yaml  tests.yaml
examples/: advanced_workflows.py  basic_usage.py  extended_agent_usage.py  fast_codex_hello.cpp  integration_demo.py  tic_tac_toe.cpp
mcp/: MCP_Pal.md  MCP_Rube.md
scripts/: __init__.py  agent_discovery.py  apply_autofix.py  apply_docstrings.py  apply_type_hints.py  build_and_upload.py  check_hallucination_metrics.py  classify_llm_fixable.py  compute_e2e_pass_rates.py  compute_pass_rates.py  create_prs.py  finding_utils.py  fix_installation.sh  fix_type_registry.py  generate_autofix_pr_content.py  generate_extended_agents.py  generate_suggestions.py  normalize_findings.py  notify_slack.py  readme_checker.py  report_agent_usage.py  report_memory_tokens.py  run_consensus_review.py  run_stochastic_local.py  scope_selector.py  security_consensus.py  semantic_validate.py  setup_branch_protection.sh  setup_pal_api_keys.sh  setup_zen_api_keys.sh  start-dashboard.sh  test_pal_integration.sh  test_zen_integration.sh  validate_agents.py  validate_findings_schema.py  validate_pypi_ready.py  validate_schema.py
setup/: __init__.py
tests/: __init__.py  conftest.py  test_agents.py  test_agents_cli.py  test_anthropic_client.py  (+15 more)
(+918 files in other folders)
