[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/superclaude-core",
    "crates/superclaude-daemon",
    "crates/superclaude-runtime",
    "crates/dashboard",
    "crates/snake-game",
    "crates/hangman-game",
    # "crates/dashboard/frontend",  # Temporarily disabled - has missing dependency
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tony"]
license = "MIT"

[workspace.dependencies]
# gRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.0", features = ["v4"] }

# Parsing
gray_matter = "0.2"
glob = "0.3"
regex = "1"

# Optional database support (optionality is per-crate, not workspace)
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Process management
which = "6.0"

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Unix socket support
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

# Async utilities
async-stream = "0.3"

# Build dependencies
tonic-build = "0.12"

# Internal crates
superclaude-proto = { path = "crates/proto" }
superclaude-core = { path = "crates/superclaude-core" }
