[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SuperClaude"
version = "7.0.0"
authors = [
    {name = "NomenAK", email = "anton.knoery@gmail.com"},
    {name = "Mithun Gowda B", email = "mithungowda.b7411@gmail.com"}
]
description = "SuperClaude Framework - Config-first meta-framework for Claude Code with 33 specialized agent personas"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
keywords = ["claude", "ai", "framework", "mcp", "agents", "prompts", "claude-code", "meta-framework"]
# No required dependencies - config-first architecture
# Use optional dependency groups for Python functionality:
#   pip install .[runtime]  - Loop orchestration
#   pip install .[full]     - All features
dependencies = []

[project.urls]
Homepage = "https://github.com/SuperClaude-Org/SuperClaude_Framework"
GitHub = "https://github.com/SuperClaude-Org/SuperClaude_Framework"
"Bug Tracker" = "https://github.com/SuperClaude-Org/SuperClaude_Framework/issues"
"Mithun Gowda B" = "https://github.com/mithun50"
"NomenAK" = "https://github.com/NomenAK"

# No CLI scripts - Claude Code loads configs directly

[project.optional-dependencies]
# Orchestrator dependencies for SDK-based agentic loop
orchestrator = [
    "claude-agent-sdk>=0.1.0",  # Official Anthropic Agent SDK
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]
# Runtime dependencies for loop orchestration
runtime = [
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]
# Full installation with all optional dependencies
full = [
    "claude-agent-sdk>=0.1.0",  # Official Anthropic Agent SDK
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "watchdog>=3.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "jsonschema>=4.0",
]
# Development dependencies
dev = [
    "pyyaml>=6.0",
    "ruff>=0.1.0",
]
# Test dependencies
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "jsonschema>=4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SuperClaude*"]
exclude = ["tests*", ".git*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml", "*.json"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Ignore line length - many legitimate long lines in CLI output with color codes
ignore = ["E501"]
