[package]
name = "superclaude-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared protobuf types for SuperClaude gRPC services"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
