[package]
name = "superclaude-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types, parsers, and utilities for SuperClaude"

[features]
default = ["serde_yaml", "glob", "gray_matter"]
wasm = []  # Exclude non-WASM-safe deps when building for WASM

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true, optional = true }
gray_matter = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
