[package]
name = "superclaude-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SuperClaude orchestration daemon - manages AI agent executions"

[[bin]]
name = "superclaude-daemon"
path = "src/main.rs"

[dependencies]
# Internal
superclaude-proto = { workspace = true }
superclaude-core = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Process management
which = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Parsing
regex = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Unix socket support
hyper-util = { workspace = true }
tower = { workspace = true }

# Async utilities
async-stream = { workspace = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
