[package]
name = "superclaude-dashboard-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Tony"]
license = "MIT"
description = "SuperClaude Dashboard — Leptos WASM frontend"

# Opt out of parent workspace so Trunk can build independently
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

# Serialization (pinned — not using workspace)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web APIs
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Navigator",
    "Clipboard",
    "console",
] }

# Logging
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }
